--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <!-- End Google Tag Manager -->
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!--    <title><%= htmlWebpackPlugin.options.title %></title>-->
+    <title>JConf Mexico</title>
   </head>
   <body>
 
